# d3il_lite

./: .gitignore  README.md  pyproject.toml  setup.py
d3il_lite/: __init__.py
d3il_lite/d3il_sim/controllers/: Controller.py  IKControllers.py  TrajectoryTracking.py
d3il_lite/d3il_sim/controllers/Config/: fictive_robot_controller_config.gin  (+2 more)
d3il_lite/d3il_sim/core/: Camera.py  Model.py  Robots.py  Scene.py  __init__.py
d3il_lite/d3il_sim/gyms/: gym_controllers.py  gym_env_wrapper.py
d3il_lite/d3il_sim/sims/: SimFactory.py  __init__.py
d3il_lite/d3il_sim/utils/: tcp_transform.py
d3il_lite/envs/aligning/: __init__.py  aligning.py  aligning_objects.py  parallel_sampling.py
d3il_lite/envs/avoiding/: __init__.py  avoiding.py  avoiding_objects.py
d3il_lite/envs/inserting/: __init__.py  gate_insertion.py  gate_insertion_objects.py
d3il_lite/envs/pushing/: __init__.py  pushing.py  pushing_objects.py
d3il_lite/envs/sorting/: __init__.py  sorting.py  sorting_objects.py
d3il_lite/envs/stacking/: __init__.py  stacking.py  stacking_objects.py
d3il_lite/gamepad_control/: record_data.py
d3il_lite/gamepad_control/src/: tcp_control.py
d3il_sim/controllers/: IKControllers.py
d3il_sim/core/: Scene.py
d3il_sim/gyms/: gym_env_wrapper.py
d3il_sim/sims/: SimFactory.py
d3il_sim/sims/mj_beta/: MjFactory.py  MjLoadable.py  MjPrimLoader.py  MjRobot.py
d3il_sim/sims/mujoco/: MujocoRobot.py  MujocoScene.py
d3il_sim/sims/pybullet/: PybulletCamera.py  PybulletFactory.py  PybulletPrimLoader.py
d3il_sim/sims/sl/: SlCamera.py  SlRobot.py
d3il_sim/sims/universal_sim/: PrimitiveObjects.py
envs/aligning/: aligning.py  aligning_objects.py
envs/avoiding/: avoiding.py
envs/pushing/: pushing.py  pushing_objects.py
envs/sorting/: sorting.py
envs/stacking/: stacking.py
(+81 files in other folders)
